--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "vue-datepicker-local": "^1.0.19"
     },
     "dependencies": {
-        "hub-js": "^0.2.1"
+        "@riophae/vue-treeselect": "0.0.37",
+        "hub-js": "^0.2.1",
+        "vee-validate": "^2.1.0-beta.11",
+        "vue-i18n": "^8.2.0"
     }
 }
