--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@riophae/vue-treeselect": "0.0.37",
         "hub-js": "^0.2.1",
         "vee-validate": "^2.1.0-beta.11",
-        "vue-i18n": "^8.2.0"
+        "vue-i18n": "^8.2.0",
+        "vue-js-toggle-button": "^1.3.0"
     }
 }
