--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "hub-js": "^0.2.1",
         "vee-validate": "^2.1.0-beta.11",
         "vue-i18n": "^8.2.0",
-        "vue-js-toggle-button": "^1.3.0"
+        "vue-js-toggle-button": "^1.3.0",
+        "vue-snotify": "^3.2.1"
     }
 }
