--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@riophae/vue-treeselect": "0.0.37",
         "hub-js": "^0.2.1",
+        "moment": "^2.22.2",
         "vee-validate": "^2.1.0-beta.11",
         "vue-i18n": "^8.2.0",
         "vue-js-toggle-button": "^1.3.0",
